--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
   <link href="css/style.css" rel="stylesheet">
   <link href="css/style-responsive.css" rel="stylesheet">
 
-    <link href="ol/ol.css" rel="stylesheet" />
 
 
 
@@ -121,7 +120,6 @@
     <!-- main content start-->
     <div class="main-content" >
 
-
         <!-- header section start-->
         <div class="header-section">
 
@@ -131,7 +129,7 @@
 
             <!--search start-->
             <form class="searchform" action="index.html" method="post">
-                <input type="text" class="form-control" name="keyword" placeholder="输入名称搜索..." />
+                <input type="text" class="form-control" name="keyword" placeholder="Search here..." />
             </form>
             <!--search end-->
 
@@ -328,33 +326,119 @@
         <!-- header section end-->
 
         <!-- page heading start-->
+        <div class="page-heading">
+            <h3>
+                站房总数 57
+            </h3>
+            <ul class="breadcrumb">
+                <li>
+                    <a href="#">污水智慧物联网</a>
+                </li>
+                <li class="active">站房信息</li>
+            </ul>
+            <div class="state-info">
+                <section class="panel">
+                    <div class="panel-body">
+                        <div class="summary">
+                            <span>站房(正常/告警)</span>
+                            <h3 class="red-txt">14 / 43</h3>
+                        </div>
+                        <div id="income" class="chart-bar"></div>
+                    </div>
+                </section>
+                <section class="panel">
+                    <div class="panel-body">
+                        <div class="summary">
+                            <span>设备(在线/离线)</span>
+                            <h3 class="green-txt">2 / 50</h3>
+                        </div>
+                        <div id="expense" class="chart-bar"></div>
+                    </div>
+                </section>
+            </div>
+        </div>
         <!-- page heading end-->
 
         <!--body wrapper start-->
-
-        <div class="wrapper" style="padding:0">
+        <div class="wrapper">
             <div class="row">
-                <div class="col-sm-12">
-                    <section class="panel">
-                        <!--<header class="panel-heading">
-                            <span>医保定点</span>
-                            <span class="tools pull-right">
-                                <a href="javascript:;" class="fa fa-chevron-down"></a>
-                                <a href="javascript:;" class="fa fa-times"></a>
-                            </span>
-                        </header>-->
-                        <div class="panel-body" style="padding:0">
-                            <div id="map" class="vmaps" style="height:760px">
+                <div class="col-md-12">
+                    <div class="row state-overview">
+                        <div class="col-md-4 col-xs-12 col-sm-4">
+                            <div class="panel purple">
+                                <div class="symbol">
+                                    <i class="fa fa-gavel"></i>
+                                </div>
+                                <div class="state-value">
+                                    <div class="value">230</div>
+                                    <div class="title">清水泵(台)</div>
+                                </div>
                             </div>
                         </div>
-                    </section>
+                        <div class="col-md-4 col-xs-12 col-sm-4">
+                            <div class="panel red">
+                                <div class="symbol">
+                                    <i class="fa fa-tags"></i>
+                                </div>
+                                <div class="state-value">
+                                    <div class="value">90</div>
+                                    <div class="title">加药泵(台)</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-xs-12 col-sm-4">
+                            <div class="panel blue">
+                                <div class="symbol">
+                                    <i class="fa fa-money"></i>
+                                </div>
+                                <div class="state-value">
+                                    <div class="value">224</div>
+                                    <div class="title">鼓风机(台)</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+         <!--       <div class="col-md-6">
+                    <div class="panel deep-purple-box">
+                        <div class="panel-body">
+                            <div class="row">
+                                <div class="col-md-7 col-sm-7 col-xs-7">
+                                    <div id="graph-donut" class="revenue-graph"></div>
+
+                                </div>
+                                <div class="col-md-5 col-sm-5 col-xs-5">
+                                    <ul class="bar-legend">
+                                        <li><span class="blue"></span> Open rate</li>
+                                        <li><span class="green"></span> Click rate</li>
+                                        <li><span class="purple"></span> Share rate</li>
+                                        <li><span class="red"></span> Unsubscribed rate</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>-->
+            </div>
+            <div class="row">
+                <div>
+                    <ul class="revenue-nav" style="float:left">
+                    <li class="active"><a href="#">今日</a></li>
+                    <li><a href="#">本月</a></li>
+                    <li><a href="#">今年</a></li>
+                    <li><a href="#">历史</a></li>
+                    </ul>
                 </div>
             </div>
+            <div class="row">
+    <div id="echarts1" style="width: 100%;height:400px;"></div>
+            </div>
+
         </div>
         <!--body wrapper end-->
 
         <!--footer section start-->
-<!--        <footer>
+        <!--<footer>
             2014 &copy; AdminEx by ThemeBucket
         </footer>-->
         <!--footer section end-->
@@ -363,6 +447,7 @@
     </div>
     <!-- main content end-->
 </section>
+
 <!-- Placed js at the end of the document so the pages load faster -->
 <script src="js/jquery-1.10.2.min.js"></script>
 <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
@@ -390,8 +475,8 @@
 
 
 <!--Morris Chart-->
-<!--<script src="js/morris-chart/morris.js"></script>
-<script src="js/morris-chart/raphael-min.js"></script>-->
+<script src="js/morris-chart/morris.js"></script>
+<script src="js/morris-chart/raphael-min.js"></script>
 
 <!--Calendar-->
 <script src="js/calendar/clndr.js"></script>
@@ -404,33 +489,35 @@
 
 <!--Dashboard Charts-->
 <!--<script src="js/dashboard-chart-init.js"></script>-->
+    <script src="js/hsx/echarts.js"></script>
+        <script type="text/javascript">
+        // 基于准备好的dom，初始化echarts实例
+            var myChart = echarts.init(document.getElementById('echarts1'));
 
-    <!--map-->
-    <script src="ol/ol.js"></script>
-    <script>
-        $(function () {
-            var googleMapLayer = new ol.layer.Tile({
-                source: new ol.source.XYZ({
-                    url: 'http://www.google.cn/maps/vt/pb=!1m4!1m3!1i{z}!2i{x}!3i{y}!2m3!1e0!2sm!3i380072576!3m8!2szh-CN!3scn!5e1105!12m4!1e68!2m2!1sset!2sRoadmap!4e0!5m1!1e0'
-                })
-            });
-            var googleSatelliteLayer = new ol.layer.Tile({
-                source: new ol.source.XYZ({
-                    url: 'http://mt2.google.cn/vt/lyrs=y&hl=zh-CN&gl=CN&src=app&x={x}&y={y}&z={z}&s=G'//谷歌卫星地图 混合
-                }),
-                projection: 'EPSG:3857'
-            });
+        // 指定图表的配置项和数据
+        var option = {
+            title: {
+                text: '流量(立方米/小时)'
+            },
+            tooltip: {},
+            legend: {
+                data:['流量']
+            },
+            xAxis: {
+                data: ["衬衫","羊毛衫","雪纺衫","裤子","高跟鞋","袜子"]
+            },
+            yAxis: {},
+            series: [{
+                name: '流量',
+                type: 'bar',
+                data: [5, 20, 36, 10, 10, 20]
+            }]
+        };
 
-            var map = new ol.Map({
-                layers: [googleSatelliteLayer],
-                view: new ol.View({
-                    center: [118.186068, 24.481014],
-                    projection: 'EPSG:4326',
-                    zoom: 11
-                }),
-                target: 'map'
-            });
-        });
+        // 使用刚指定的配置项和数据显示图表。
+        myChart.setOption(option);
     </script>
+
+
 </body>
 </html>
