--- a/index.html
+++ b/index.html
@@ -504,13 +504,13 @@
                 data:['流量']
             },
             xAxis: {
-                data: ["衬衫","羊毛衫","雪纺衫","裤子","高跟鞋","袜子"]
+                data: ['0点', '2点', '4点', '6点', '8点', '10点', '12点', '14点', '16点', '18点', '20点', '22点','24点'] 
             },
             yAxis: {},
             series: [{
                 name: '流量',
                 type: 'bar',
-                data: [5, 20, 36, 10, 10, 20]
+                data: [5, 20, 36, 10, 10, 20,5, 20, 36, 10, 10, 20]
             }]
         };
 
