--- a/站点.html
+++ b/站点.html
@@ -1,36 +1,36 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-  <meta name="keywords" content="admin, dashboard, bootstrap, template, flat, modern, theme, responsive, fluid, retina, backend, html5, css, css3">
-  <meta name="description" content="">
-  <meta name="author" content="ThemeBucket">
-  <link rel="shortcut icon" href="#" type="image/png">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <meta name="keywords" content="admin, dashboard, bootstrap, template, flat, modern, theme, responsive, fluid, retina, backend, html5, css, css3">
+    <meta name="description" content="">
+    <meta name="author" content="ThemeBucket">
+    <link rel="shortcut icon" href="#" type="image/png">
 
-  <title>污水智慧物联网</title>
+    <title>污水智慧物联网</title>
 
-  <!--icheck-->
-  <link href="js/iCheck/skins/minimal/minimal.css" rel="stylesheet">
-  <link href="js/iCheck/skins/square/square.css" rel="stylesheet">
-  <link href="js/iCheck/skins/square/red.css" rel="stylesheet">
-  <link href="js/iCheck/skins/square/blue.css" rel="stylesheet">
+    <!--icheck-->
+    <link href="js/iCheck/skins/minimal/minimal.css" rel="stylesheet">
+    <link href="js/iCheck/skins/square/square.css" rel="stylesheet">
+    <link href="js/iCheck/skins/square/red.css" rel="stylesheet">
+    <link href="js/iCheck/skins/square/blue.css" rel="stylesheet">
 
-  <!--dashboard calendar-->
-  <link href="css/clndr.css" rel="stylesheet">
+    <!--dashboard calendar-->
+    <link href="css/clndr.css" rel="stylesheet">
 
-  <!--Morris Chart CSS -->
-  <link rel="stylesheet" href="js/morris-chart/morris.css">
+    <!--Morris Chart CSS -->
+    <link rel="stylesheet" href="js/morris-chart/morris.css">
 
-  <!--common-->
-  <link href="css/style.css" rel="stylesheet">
-  <link href="css/style-responsive.css" rel="stylesheet">
-
-
+    <!--common-->
+    <link href="css/style.css" rel="stylesheet">
+    <link href="css/style-responsive.css" rel="stylesheet">
 
 
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
+
+
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
   <script src="js/html5shiv.js"></script>
   <script src="js/respond.min.js"></script>
   <![endif]-->
@@ -38,24 +38,26 @@
 
 <body class="sticky-header">
 
-<section>
-    <!-- left side start-->
-    <div class="left-side sticky-left-side">
+    <section>
+        <!-- left side start-->
+        <div class="left-side sticky-left-side">
 
-        <!--logo and iconic logo start-->
-        <div class="logo">
-            <a href="index.html"><img src="images/logo.png" alt=""></a>
-        </div>
+            <!--logo and iconic logo start-->
+            <div class="logo">
+                <a href="index.html">
+                    <img src="images/logo.png" alt=""></a>
+            </div>
 
-        <div class="logo-icon text-center">
-            <a href="index.html"><img src="images/logo_icon.png" alt=""></a>
-        </div>
-        <!--logo and iconic logo end-->
+            <div class="logo-icon text-center">
+                <a href="index.html">
+                    <img src="images/logo_icon.png" alt=""></a>
+            </div>
+            <!--logo and iconic logo end-->
 
-        <div class="left-side-inner">
+            <div class="left-side-inner">
 
-            <!-- visible to small devices only -->
-            <!--<div class="visible-xs hidden-sm hidden-md hidden-lg">
+                <!-- visible to small devices only -->
+                <!--<div class="visible-xs hidden-sm hidden-md hidden-lg">
                 <div class="media logged-user">
                     <img alt="" src="images/photos/user-avatar.png" class="media-object">
                     <div class="media-body">
@@ -72,7 +74,7 @@
                 </ul>
             </div>-->
 
-            <!--sidebar nav start-->
+                <!--sidebar nav start-->
             <ul class="nav nav-pills nav-stacked custom-nav">
                 <li class="active"><a href="index.html"><i class="fa fa-home"></i> <span>功能</span></a></li>
                 <li class="menu-list">
@@ -84,7 +86,7 @@
                     </ul>
                 </li>
                 <li class="menu-list">
-                    <a href="javascript:;"><i class="fa fa-bullhorn"></i> <span>报警中心</span></a>
+                    <a href="javascript:;"><i class="fa fa-book"></i> <span>报警中心</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="告警事件.html">警告事件</a></li>
                         <li><a href="javascript:void()">短信通知</a></li>
@@ -93,14 +95,14 @@
                     </ul>
                 </li>
                 <li class="menu-list">
-                    <a href="javascript:;"><i class="fa fa-th-list"></i> <span>统计分析</span></a>
+                    <a href="javascript:;"><i class="fa fa-cogs"></i> <span>统计分析</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="javascript:void()">站房统计</a></li>
                         <li><a href="javascript:void()">警告分析</a></li>
                     </ul>
                 </li>
                 <li class="menu-list">
-                    <a href="javascript:;"><i class="fa fa-book"></i> <span>用户中心</span></a>
+                    <a href="javascript:;"><i class="fa fa-bullhorn"></i> <span>用户中心</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="javascript:void()">账号管理</a></li>
                         <li><a href="javascript:void()">用户管理</a></li>
@@ -108,33 +110,33 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="javascript:;"><i class="fa fa-cogs"></i> <span>系统设置</span></a>
+                    <a href="javascript:;"><i class="fa fa-envelope"></i> <span>系统设置</span></a>
                 </li>
             </ul>
-            <!--sidebar nav end-->
+                <!--sidebar nav end-->
 
+            </div>
         </div>
-    </div>
-    <!-- left side end-->
-    
-    <!-- main content start-->
-    <div class="main-content" >
+        <!-- left side end-->
 
-        <!-- header section start-->
-        <div class="header-section">
+        <!-- main content start-->
+        <div class="main-content">
 
-            <!--toggle button start-->
-            <a class="toggle-btn"><i class="fa fa-bars"></i></a>
-            <!--toggle button end-->
+            <!-- header section start-->
+            <div class="header-section">
 
-            <!--search start-->
-            <!--<form class="searchform" action="index.html" method="post">
+                <!--toggle button start-->
+                <a class="toggle-btn"><i class="fa fa-bars"></i></a>
+                <!--toggle button end-->
+
+                <!--search start-->
+                <!--<form class="searchform" action="index.html" method="post">
                 <input type="text" class="form-control" name="keyword" placeholder="Search here..." />
             </form>-->
-            <!--search end-->
+                <!--search end-->
 
-            <!--notification menu start -->
-            <!--<div class="menu-right">
+                <!--notification menu start -->
+                <!--<div class="menu-right">
                 <ul class="notification-menu">
                     <li>
                         <a href="#" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
@@ -320,125 +322,208 @@
 
                 </ul>
             </div>-->
-            <!--notification menu end -->
+                <!--notification menu end -->
 
-        </div>
-        <!-- header section end-->
+            </div>
+            <!-- header section end-->
 
-        <!-- page heading start-->
-        <div class="page-heading">
-            <h3>
-                设备告警
-            </h3>
-            <ul class="breadcrumb">
-                <li>
-                    <a href="#">污水智慧物联网</a>
-                </li>
-                <li class="active">告警事件</li>
-            </ul>
-        </div>
-        <!-- page heading end-->
+            <!-- page heading start-->
+            <div class="page-heading">
+                <h3>顶许社
+                </h3>
+                <ul class="breadcrumb">
+                    <li>
+                        <a href="#">污水智慧物联网</a>
+                    </li>
+                    <li class="active">站点</li>
+                </ul>
+                <div class="state-info">
 
-        <!--body wrapper start-->
-        <div class="wrapper">
-            <div class="row">
-                <div>
-                    <ul class="revenue-nav" style="float:left">
-                    <li><a href="#">近7日</a></li>
-                    <li><a href="#">近30日</a></li>
-                    </ul>
-                </div>
-                <div style="float:left;margin:15px;">
-                    <input type="date" /> 到 <input type="date" /> 
-                    <button type="button" class="btn btn-primary">确定</button>
+                    <div>
+                        <ul class="revenue-nav" style="float: left">
+                            <li><a href="#">可视化监控</a></li>
+                            <li><a href="#">历史数据</a></li>
+                            <li><a href="#">站房信息</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-            <div class="row">
-    <div id="echarts1" style="width: 100%;height:380px;"></div>
+            <!-- page heading end-->
+
+            <!--body wrapper start-->
+            <div class="wrapper">
+
+                <ul id="myTab" class="nav nav-tabs">
+                    <li class="active">
+                        <a href="#tab1" data-toggle="tab">流量计
+                        </a>
+                    </li>
+                    <li><a href="#tab2" data-toggle="tab">鼓风机</a></li>
+                    <li><a href="#tab3" data-toggle="tab">加药泵</a></li>
+                    <li><a href="#tab4" data-toggle="tab">清水泵</a></li>
+                </ul>
+
+                <div id="myTabContent" class="tab-content">
+                    <div class="tab-pane fade in active" id="tab1">
+                        <p>流量计</p>
+                        <div>
+                            <ul class="revenue-nav">
+                                <li class="active"><a href="#">今日</a></li>
+                                <li><a href="#">本月</a></li>
+                                <li><a href="#">今年</a></li>
+                                <li><a href="#">历史</a></li>
+                            </ul>
+                        </div>
+                        <input type="date" />
+                        <div id="echarts1" style="width: 100%; height: 400px;"></div>
+                    </div>
+                    <div class="tab-pane fade" id="tab2">
+                        <p>鼓风机</p>
+                    </div>
+                    <div class="tab-pane fade" id="tab3">
+                        <p>加药泵</p>
+                    </div>
+                    <div class="tab-pane fade" id="tab4">
+                        <p>清水泵</p>
+                        <button id="fat-btn" class="btn btn-primary" data-loading-text="Loading..."
+                            type="button">
+                            今日
+                        </button>
+                        <input type="date" />
+                        <div id="echarts4" style="width: 600px; height: 400px;"></div>
+                    </div>
+                </div>
             </div>
+            <!--body wrapper end-->
 
-        </div>
-        <!--body wrapper end-->
-
-        <!--footer section start-->
-        <!--<footer>
+            <!--footer section start-->
+            <!--<footer>
             2014 &copy; AdminEx by ThemeBucket
         </footer>-->
-        <!--footer section end-->
+            <!--footer section end-->
 
 
-    </div>
-    <!-- main content end-->
-</section>
+        </div>
+        <!-- main content end-->
+    </section>
 
-<!-- Placed js at the end of the document so the pages load faster -->
-<script src="js/jquery-1.10.2.min.js"></script>
-<script src="js/jquery-ui-1.9.2.custom.min.js"></script>
-<script src="js/jquery-migrate-1.2.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/modernizr.min.js"></script>
-<script src="js/jquery.nicescroll.js"></script>
+    <!-- Placed js at the end of the document so the pages load faster -->
+    <script src="js/jquery-1.10.2.min.js"></script>
+    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
+    <script src="js/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/modernizr.min.js"></script>
+    <script src="js/jquery.nicescroll.js"></script>
 
-<!--easy pie chart-->
-<script src="js/easypiechart/jquery.easypiechart.js"></script>
-<script src="js/easypiechart/easypiechart-init.js"></script>
+    <!--easy pie chart-->
+    <script src="js/easypiechart/jquery.easypiechart.js"></script>
+    <script src="js/easypiechart/easypiechart-init.js"></script>
 
-<!--Sparkline Chart-->
-<script src="js/sparkline/jquery.sparkline.js"></script>
-<script src="js/sparkline/sparkline-init.js"></script>
+    <!--Sparkline Chart-->
+    <script src="js/sparkline/jquery.sparkline.js"></script>
+    <script src="js/sparkline/sparkline-init.js"></script>
 
-<!--icheck -->
-<script src="js/iCheck/jquery.icheck.js"></script>
-<script src="js/icheck-init.js"></script>
+    <!--icheck -->
+    <script src="js/iCheck/jquery.icheck.js"></script>
+    <script src="js/icheck-init.js"></script>
 
-<!-- jQuery Flot Chart-->
-<script src="js/flot-chart/jquery.flot.js"></script>
-<script src="js/flot-chart/jquery.flot.tooltip.js"></script>
-<script src="js/flot-chart/jquery.flot.resize.js"></script>
+    <!-- jQuery Flot Chart-->
+    <script src="js/flot-chart/jquery.flot.js"></script>
+    <script src="js/flot-chart/jquery.flot.tooltip.js"></script>
+    <script src="js/flot-chart/jquery.flot.resize.js"></script>
 
 
-<!--Morris Chart-->
-<script src="js/morris-chart/morris.js"></script>
-<script src="js/morris-chart/raphael-min.js"></script>
+    <!--Morris Chart-->
+    <script src="js/morris-chart/morris.js"></script>
+    <script src="js/morris-chart/raphael-min.js"></script>
 
-<!--Calendar-->
-<script src="js/calendar/clndr.js"></script>
-<script src="js/calendar/evnt.calendar.init.js"></script>
-<script src="js/calendar/moment-2.2.1.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+    <!--Calendar-->
+    <script src="js/calendar/clndr.js"></script>
+    <script src="js/calendar/evnt.calendar.init.js"></script>
+    <script src="js/calendar/moment-2.2.1.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 
-<!--common scripts for all pages-->
-<script src="js/scripts.js"></script>
+    <!--common scripts for all pages-->
+    <script src="js/scripts.js"></script>
 
-<!--Dashboard Charts-->
-<!--<script src="js/dashboard-chart-init.js"></script>-->
+    <!--Dashboard Charts-->
+    <!--<script src="js/dashboard-chart-init.js"></script>-->
     <script src="js/hsx/echarts.js"></script>
     <script type="text/javascript">
         // 基于准备好的dom，初始化echarts实例
-        var myChart = echarts.init(document.getElementById('echarts1'));
+        var myChart1 = echarts.init(document.getElementById('echarts1'));
 
         // 指定图表的配置项和数据
         var option = {
+
             title: {
-                text: '告警数（次）'
+                text: '流量(立方米/小时)'
             },
             tooltip: {},
             legend: {
-                data: ['告警数']
+                data: ['流量']
             },
             xAxis: {
-                data: ['9月1日', '9月2日', '9月3日', '9月4日', '9月5日', '9月6日', '9月7日']
+                data: ['0点', '2点', '4点', '6点', '8点', '10点', '12点', '14点', '16点', '18点', '20点', '22点', '24点']
             },
             yAxis: {},
             series: [{
                 name: '流量',
-                type: 'line',
-                data: [5, 20, 36, 10, 10, 20, 5]
+                type: 'bar',
+                data: [5, 20, 36, 10, 10, 20, 5, 20, 36, 10, 10, 20, 20]
             }]
         };
 
         // 使用刚指定的配置项和数据显示图表。
-        myChart.setOption(option);
+        myChart1.setOption(option);
+
+
+        var myChart4 = echarts.init(document.getElementById('echarts4'));
+        var option4 = {
+
+            title: {
+                text: '清水泵'
+            },
+            tooltip: {},
+            legend: {
+                data: ['状态']
+            },
+            xAxis: {
+                data: ['0点', '2点', '4点', '6点', '8点', '10点', '12点', '14点', '16点', '18点', '20点', '22点', '24点']
+            },
+            yAxis: {
+                min: 0,
+                max: 4,
+                axisLabel: {
+                    formatter: function (value) {
+                        var texts = [];
+                        if (value == 0) {
+                            texts.push(' ');
+                        }
+                        else if (value <= 1) {
+                            texts.push('运行');
+                        }
+                        else if (value <= 2) {
+                            texts.push('停止');
+                        }
+                        else if (value <= 3) {
+                            texts.push('跳闸');
+                        }
+                        else {
+                            texts.push(' ');
+                        }
+                        return texts;
+
+                    }
+                }
+            },
+            series: [{
+                name: '状态',
+                type: 'line',
+                data: [1,2,3,3,2,2,2,2,1,1,2,2,2]
+            }]
+        };
+        myChart4.setOption(option4);
     </script>
 
 
