--- a/站房信息.html
+++ b/站房信息.html
@@ -8,7 +8,7 @@
   <meta name="author" content="ThemeBucket">
   <link rel="shortcut icon" href="#" type="image/png">
 
-  <title>AdminX</title>
+  <title>污水智慧物联网</title>
 
   <!--icheck-->
   <link href="js/iCheck/skins/minimal/minimal.css" rel="stylesheet">
@@ -55,7 +55,7 @@
         <div class="left-side-inner">
 
             <!-- visible to small devices only -->
-            <div class="visible-xs hidden-sm hidden-md hidden-lg">
+            <!--<div class="visible-xs hidden-sm hidden-md hidden-lg">
                 <div class="media logged-user">
                     <img alt="" src="images/photos/user-avatar.png" class="media-object">
                     <div class="media-body">
@@ -70,7 +70,7 @@
                   <li><a href="#"><i class="fa fa-cog"></i> <span>Settings</span></a></li>
                   <li><a href="#"><i class="fa fa-sign-out"></i> <span>Sign Out</span></a></li>
                 </ul>
-            </div>
+            </div>-->
 
             <!--sidebar nav start-->
             <ul class="nav nav-pills nav-stacked custom-nav">
@@ -78,7 +78,7 @@
                 <li class="menu-list">
                     <a href="#"><i class="fa fa-laptop"></i> <span>监控中心</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="javascript:void()">站房信息</a></li>
+                        <li><a href="站房信息.html">站房信息</a></li>
                         <li><a href="javascript:void()">终端设备</a></li>
 
                     </ul>
@@ -86,7 +86,7 @@
                 <li class="menu-list">
                     <a href="javascript:;"><i class="fa fa-book"></i> <span>报警中心</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="javascript:void()">警告事件</a></li>
+                        <li><a href="告警事件.html">警告事件</a></li>
                         <li><a href="javascript:void()">短信通知</a></li>
                         <li><a href="javascript:void()">时间规则</a></li>
 
@@ -128,13 +128,13 @@
             <!--toggle button end-->
 
             <!--search start-->
-            <form class="searchform" action="index.html" method="post">
+            <!--<form class="searchform" action="index.html" method="post">
                 <input type="text" class="form-control" name="keyword" placeholder="Search here..." />
-            </form>
+            </form>-->
             <!--search end-->
 
             <!--notification menu start -->
-            <div class="menu-right">
+            <!--<div class="menu-right">
                 <ul class="notification-menu">
                     <li>
                         <a href="#" class="btn btn-default dropdown-toggle info-number" data-toggle="dropdown">
@@ -319,7 +319,7 @@
                     </li>
 
                 </ul>
-            </div>
+            </div>-->
             <!--notification menu end -->
 
         </div>
@@ -429,6 +429,9 @@
                     <li><a href="#">历史</a></li>
                     </ul>
                 </div>
+                <div style="float:left;margin:15px;">
+                    <input type="date" />
+                </div>
             </div>
             <div class="row">
     <div id="echarts1" style="width: 100%;height:400px;"></div>
@@ -510,7 +513,7 @@
             series: [{
                 name: '流量',
                 type: 'bar',
-                data: [5, 20, 36, 10, 10, 20,5, 20, 36, 10, 10, 20]
+                data: [5, 20, 36, 10, 10, 20, 5, 20, 36, 10, 10, 20, 20]
             }]
         };
 
