--- a/告警事件.html
+++ b/告警事件.html
@@ -84,7 +84,7 @@
                     </ul>
                 </li>
                 <li class="menu-list">
-                    <a href="javascript:;"><i class="fa fa-bullhorn"></i> <span>报警中心</span></a>
+                    <a href="javascript:;"><i class="fa fa-book"></i> <span>报警中心</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="告警事件.html">警告事件</a></li>
                         <li><a href="javascript:void()">短信通知</a></li>
@@ -93,14 +93,14 @@
                     </ul>
                 </li>
                 <li class="menu-list">
-                    <a href="javascript:;"><i class="fa fa-th-list"></i> <span>统计分析</span></a>
+                    <a href="javascript:;"><i class="fa fa-cogs"></i> <span>统计分析</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="javascript:void()">站房统计</a></li>
                         <li><a href="javascript:void()">警告分析</a></li>
                     </ul>
                 </li>
                 <li class="menu-list">
-                    <a href="javascript:;"><i class="fa fa-book"></i> <span>用户中心</span></a>
+                    <a href="javascript:;"><i class="fa fa-bullhorn"></i> <span>用户中心</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="javascript:void()">账号管理</a></li>
                         <li><a href="javascript:void()">用户管理</a></li>
@@ -108,7 +108,7 @@
                     </ul>
                 </li>
                 <li>
-                    <a href="javascript:;"><i class="fa fa-cogs"></i> <span>系统设置</span></a>
+                    <a href="javascript:;"><i class="fa fa-envelope"></i> <span>系统设置</span></a>
                 </li>
             </ul>
             <!--sidebar nav end-->
