--- a/站点.html
+++ b/站点.html
@@ -375,13 +375,25 @@
                             </ul>
                         </div>
                         <input type="date" />
-                        <div id="echarts1" style="width: 100%; height: 400px;"></div>
+                        <div id="echarts1" style="width: 100%; height: 300px;"></div>
                     </div>
                     <div class="tab-pane fade" id="tab2">
                         <p>鼓风机</p>
+                        <button id="Button2" class="btn btn-primary" data-loading-text="Loading..."
+                            type="button">
+                            今日
+                        </button>
+                        <input type="date" />
+                        <div id="echarts2" style="width: 700px; height: 300px;"></div>
                     </div>
                     <div class="tab-pane fade" id="tab3">
                         <p>加药泵</p>
+                        <button id="Button1" class="btn btn-primary" data-loading-text="Loading..."
+                            type="button">
+                            今日
+                        </button>
+                        <input type="date" />
+                        <div id="echarts3" style="width: 700px; height: 300px;"></div>
                     </div>
                     <div class="tab-pane fade" id="tab4">
                         <p>清水泵</p>
@@ -390,7 +402,7 @@
                             今日
                         </button>
                         <input type="date" />
-                        <div id="echarts4" style="width: 600px; height: 400px;"></div>
+                        <div id="echarts4" style="width: 700px; height: 300px;"></div>
                     </div>
                 </div>
             </div>
@@ -478,6 +490,8 @@
         myChart1.setOption(option);
 
 
+        var myChart2 = echarts.init(document.getElementById('echarts2'));
+        var myChart3 = echarts.init(document.getElementById('echarts3'));
         var myChart4 = echarts.init(document.getElementById('echarts4'));
         var option4 = {
 
@@ -524,6 +538,8 @@
             }]
         };
         myChart4.setOption(option4);
+        myChart3.setOption(option4);
+        myChart2.setOption(option4);
     </script>
 
 
